WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312707
[JSC][WASM][Debugger] Fix null stopData crash for StackOverflow/Termination traps
https://bugs.webkit.org/show_bug.cgi?id=312707
Summary
[JSC][WASM][Debugger] Fix null stopData crash for StackOverflow/Termination ...
Yijia Huang
Reported
2026-04-18 22:05:38 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-18 22:05:44 PDT
<
rdar://problem/175100468
>
Yijia Huang
Comment 2
2026-04-18 22:09:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63059
EWS
Comment 3
2026-04-20 13:51:47 PDT
Committed
311619@main
(bdb1b12f3a60): <
https://commits.webkit.org/311619@main
> Reviewed commits have been landed. Closing PR #63059 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug