[JSC][WASM][Debugger] Fix null stopData crash for StackOverflow/Termination    traps https://bugs.webkit.org/show_bug.cgi?id=312707 rdar://175100468

Reviewed by Mark Lam.

When check_stack_and_vm_traps detects both NeedStopTheWorld and
StackOverflow/Termination in the prologue, handleTrapsIfNeeded() processes
NeedStopTheWorld first: setPrologueStopData sets stopData, the debugger
serves the stop, then clearStop() nulls stopData on resume. When the
prologue subsequently throws StackOverflow/Termination and calls
handleDebuggerTrapIfNeeded(), stopData is null and
RELEASE_ASSERT(isStoppedAtPrologue()) fires.

Fix by re-establishing prologue stop context with setPrologueStopData()
when stopData is absent.

Canonical link: https://commits.webkit.org/311619@main